--- a/catalog/catalog_men.html
+++ b/catalog/catalog_men.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/style/style.css">
-    <title>Catalog</title>
+    <title>Catalog_men</title>
 </head>
 <body>
     <div class="wrapper">
@@ -21,7 +21,7 @@
             <div class="header-right">
                 <div class="user">
                     <img src="/images/icons/account.png" alt="img">
-                    <div class="user-name">Привет, Алексей(<span>выйти</span>)</div>
+                    <div class="user-name">Привет, Алексей (<span>выйти</span>)</div>
                 </div>
                 <div class="basket">
                     <img src="/images/icons/bascet.png" alt="img">
@@ -53,10 +53,10 @@
                 <div>
                     <h2>Колекции</h2>
                     <div>
-                        <a href="#">Женщинам(1725)</a>
-                        <a href="#">Мужчинам(635)</a>
-                        <a href="#">Детям(2514)</a>
-                        <a href="#">Новинки(76)</a>
+                        <a href="#">Женщинам (1725)</a>
+                        <a href="#">Мужчинам (635)</a>
+                        <a href="#">Детям (2514)</a>
+                        <a href="#">Новинки (76)</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,15 @@
             <div class="footer-right">
                 <div>
                     <h2>Мы в социальных сетях</h2>
-                    <div></div>
+                    <div>
+                        <span>Сайт разработан в inordic</span>
+                        <span>2018 &copy; Все права защищены</span>
+                        <div>
+                            <a href="#" class="twitter"></a>
+                            <a href="#" class="facebook"></a>
+                            <a href="#" class="instagram"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
